--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url('./assets/blur-background-1187974.jpg') no-repeat center center fixed;
+  background-size: cover;
 }
 
 code {
